--- a/about .html
+++ b/about .html
@@ -17,11 +17,11 @@
           <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
-        <div class="container">
-            <h1> About Me </h1>
-            <span>
-              <img src="images/han.jpg" alt="profile-pic">
-            </span>
+      <div class="hero">
+          <h1> About Me </h1>
+          <video class="video-bg" autoplay muted loop>
+            <source src="assets/me2.mp4" type="video/mp4">
+          </video>
         </div>
        
       
