--- a/Contact.html
+++ b/Contact.html
@@ -7,9 +7,7 @@
         <link rel="stylesheet" href="CSS.css"> 
     </head>
     <body>
-        <div class="container">
-            <h1> Contact </h1>
-
+        <div class="margin ">
         </div>
         <nav>
             <div class="navbar"style="text-align: center;"> 
@@ -21,6 +19,14 @@
           <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
-               
+      <div class="hero">
+      <h1> Contact </h1>
+        <source src="images/green-mountains.jpg" type="image/jpg">
+      </div>
+      <h3> You can contact me via :</h3>
+        <p>Email: hannahrub156@gmail.com</p> 
+        <p>Instagram: han.nah29</p>
+        <p>Twitter: han.nah_a</p>
+    </div>          
     </body>
 </html> 
