--- a/Contact.html
+++ b/Contact.html
@@ -20,9 +20,12 @@
         </ul>
       </nav>
       <div class="hero">
-      <h1> Contact </h1>
-        <source src="images/green-mountains.jpg" type="image/jpg">
+        <img class="image_bg"> 
+        <div class="container">
+          <img src="images/green-mountains.jpg" type="image/jpg">
+           <h1> Contact </h1>
       </div>
+    </div>
       <h3> You can contact me via :</h3>
         <p>Email: hannahrub156@gmail.com</p> 
         <p>Instagram: han.nah29</p>
