--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,7 +23,11 @@
                 <source src="assets/me3.mov" type="video/mp4">
             </video>
             </div>
-
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make 
+                    a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
+                    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
+                    desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     <div class="gallery">
         <div class="gallery-item">
         <img src="images/hannah_before.jpeg" alt="picture of me">
@@ -34,18 +38,18 @@
         <img src="images/me&iuliana.jpg" alt="picture of me and Iuliana">
         </div> 
     </div>
-       
 
+    <br>
     <div class="social-buttons">  
-            <button class ="Twitter"> <!--source: https://codepen.io/eliakimsilvestre/pen/yAGkp--> 
-              <a href="https://twitter.com/hann_ah29">Twitter</a>
-            </button>
-            <button class ="Instagram">
-              <a href="https://www.instagram.com/han.nah_a/">Instagram</a>
-            </button>
-            <button class ="linkedin">
-              <a href="https://www.linkedin.com/in/hannah-a-ba4521121/">linkedin</a>
-            </button>
+    <a href="https://twitter.com/hann_ah29">
+        <img src="images/twitter.png" alt="https://twitter.com/hann_ah29"
+        style="width:42px;height:42px;border:o;">
+        <a href="https://www.instagram.com/han.nah_a/">
+          <img src="images/instagram.jfif" alt="https://www.instagram.com/han.nah_a/"
+          style="width:42px;height:42px;border:o;">
+          <a href="https://www.linkedin.com/in/hannah-a-ba4521121/">
+            <img src="images/linkedin.png" alt="https://www.linkedin.com/in/hannah-a-ba4521121/""
+            style="width:42px;height:42px;border:o;">
         </div>
     </body>
 </html> 
