--- a/Index.html
+++ b/Index.html
@@ -26,16 +26,16 @@
       </div>
     <br>
     <div class="social-buttons">  
-        <button class ="Twitter"> <!--source: https://codepen.io/eliakimsilvestre/pen/yAGkp--> 
-          <a href="https://twitter.com/hann_ah29">Twitter</a>
-        </button>
-        <button class ="Instagram">
-          <a href="https://www.instagram.com/han.nah_a/">Instagram</a>
-        </button>
-        <button class ="linkedin">
-          <a href="https://www.linkedin.com/in/hannah-a-ba4521121/">linkedin</a>
-        </button>
-    </div>
+    <a href="https://twitter.com/hann_ah29">
+      <img src="images/twitter.png" alt="https://twitter.com/hann_ah29"
+      style="width:42px;height:42px;border:o;">
+    <a href="https://www.instagram.com/han.nah_a/">
+      <img src="images/instagram.jfif" alt="https://www.instagram.com/han.nah_a/"
+      style="width:42px;height:42px;border:o;">
+    <a href="https://www.linkedin.com/in/hannah-a-ba4521121/">
+      <img src="images/linkedin.png" alt="https://www.linkedin.com/in/hannah-a-ba4521121/""
+      style="width:42px;height:42px;border:o;">
+</a>
   </div>      
     </body>
 </html>
