--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,7 +27,7 @@
                     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make 
                     a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
                     remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
-                    desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> <!--Source: https://www.lipsum.com/-->
     <div class="gallery">
         <div class="gallery-item">
         <img src="images/hannah_before.jpeg" alt="picture of me">
