--- a/Index.html
+++ b/Index.html
@@ -13,10 +13,9 @@
         <ul>
           <li><a href="Index.html">Home</a></li>
           <li class="active">
-            <a href="about .html">About</a></li>
-          <li><a href="Portfolio.html">Portfolio</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
+            <a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          <li><a href="cv.html">CV</a></li>
       </nav>
       <div class="hero">
         <h1> Welcome To My Portfolio</h1> 
