--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home </title>
-        <link rel="stylesheet" href="CSS.css"> 
+        <link rel="stylesheet" href="Style.css"> 
     </head>
     <body>
     <div class="margin ">
@@ -16,6 +16,7 @@
             <a href="Portfolio.html">Portfolio</a></li>
             <li><a href="Contact.html">Contact</a></li>
           <li><a href="cv.html">CV</a></li>
+        </ul>
       </nav>
       <div class="hero">
         <h1> Welcome To My Portfolio</h1> 
@@ -23,6 +24,11 @@
           <source src="assets/me1.mp4" type="video/mp4">
         </video>
       </div>
+    <br>
+    <div class="purpose">
+    <P> In this Portfolio I will be explaining and demsorting the work I have being doing during my 
+      first year of my BSc Computing degree</P>
+    </div>
     <br>
     <div class="social-buttons">  
     <a href="https://twitter.com/hann_ah29">
