--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact </title>
-        <link rel="stylesheet" href="CSS.css"> 
+        <link rel="stylesheet" href="Style.css"> 
     </head>
     <body>
         <div class="margin ">
@@ -14,9 +14,9 @@
         <ul>
           <li><a href="Index.html">Home</a></li>
           <li class="active">
-            <a href="about .html">About</a></li>
-          <li><a href="Portfolio.html">Portfolio</a></li>
-          <li><a href="Contact.html">Contact</a></li>
+            <a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          <li><a href="cv.html">CV</a></li>
         </ul>
       </nav>
       <div class="hero">
