--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,7 +14,7 @@
                 <li class="active">
                   <a href="Portfolio.html">Portfolio</a></li>
                   <li><a href="Contact.html">Contact</a></li>
-                <li><a href="cv.html">CV</a></li>i>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
         <div class="hero">
@@ -23,6 +23,7 @@
                 <source src="assets/me3.mov" type="video/mp4">
             </video>
             </div>
+            
             <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
                     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make 
                     a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
