--- a/Index.html
+++ b/Index.html
@@ -11,13 +11,15 @@
       <nav>
         <div class="navbar" style="text-align: center;"> 
         <ul>
-          <li><a href="Index.html">Home</a></li>
-          <li class="active">
-            <a href="Portfolio.html">Portfolio</a></li>
+          
+          <li class="active"><a href="index.html">Home</a></li>
+          <Li><a href="Portfolio.html">Portfolio</a></li>
             <li><a href="Contact.html">Contact</a></li>
           <li><a href="cv.html">CV</a></li>
         </ul>
+        </div>
       </nav>
+    </div>
       <div class="hero">
         <h1> Welcome To My Portfolio</h1> 
         <video class="video-bg" autoplay muted loop>
@@ -42,14 +44,13 @@
     <div class="social-buttons">  
     <a href="https://twitter.com/hann_ah29">
       <img src="images/twitter.png" alt="https://twitter.com/hann_ah29"
-      style="width:42px;height:42px;border:o;">
+      style="width:42px;height:42px;border:0;">
     <a href="https://www.instagram.com/han.nah_a/">
       <img src="images/instagram.jfif" alt="https://www.instagram.com/han.nah_a/"
-      style="width:42px;height:42px;border:o;">
-    <a href="https://www.linkedin.com/in/hannah-a-ba4521121/">
-      <img src="images/linkedin.png" alt="https://www.linkedin.com/in/hannah-a-ba4521121/""
-      style="width:42px;height:42px;border:o;">
-</a>
+      style="width:42px;height:42px;border:0;">
+    <a href="https://www.linkedin.com/in/hannah-a-ba4521121 ">
+      <img src="images/linkedin.png" alt="https://www.linkedin.com/in/hannah-a-ba4521121/"
+      style="width:42px;height:42px;border:0;"></a>
   </div>      
     </body>
 </html>
