--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,24 +19,33 @@
         </nav>
         <div class="hero">
             <h1> Portfolio </h1>
-            <video class="video-bg" autoplay muted loop>
-                <source src="assets/me3.mov" type="video/mp4">
-            </video>
+                <img class="image_bg" src="images/lake.jpg" type="image/jpg"> <!--Source: https://www.pexels.com/photo/bird-s-eye-view-of-lake-during-daytime-3225165/ -->
+              </div>
             </div>
-            
-            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make 
-                    a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
-                    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
-                    desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> <!--Source: https://www.lipsum.com/-->
+
     <div class="gallery">
         <div class="gallery-item">
-        <img src="images/hannah_before.jpeg" alt="picture of me">
-        <img src="images/group1.jpg" alt="picture of me, Chris and Nathan">
-        <img src="images/me&blessing.jpg" alt="picture of me and Blessing ">
-        <img src="images/littleme&haime.jpg" alt="picture of me and Haime"> 
-        <img src="images/cousins.jpg" alt="picture me, Grum and Haime">
-        <img src="images/me&iuliana.jpg" alt="picture of me and Iuliana">
+
+            <h3>Event- Driven Programming - pizza ordering system</h3>
+            <img src="images/program_1.jpg" alt=" Event- Driven Programming -pizza ordering system">
+            <p> For this project I had to create an online pizza ordering system, which had to be done using 
+                an event- Driven program technique. </p>
+
+            <h3> Procedural Programming - pizza ordering system</h3>
+             <img src="images/program_2.jpg"  alt="Procedural Programming- pizza ordering system"> 
+             <p> For this project I had to create an online pizza ordering system, which had to be done using 
+                a procedural Programming technique. </p>
+
+            <h3>Two player game</h3>
+            <img src="images/low-angle.jpg" alt="low angle image- placeholder 1">
+            <div class="Portfolio">
+             <p>one project that I am working on is a two player computer game. There are four babies in total; two on each side. 
+                With a ball in the middle going in random directions. The aim of the game is to get the baby to hit the ball so 
+                that it rebounds and goes to the otherside.</p> 
+            </div>
+                <!--project 1- game-->
+            
+
         </div> 
     </div>
 
@@ -44,13 +53,13 @@
     <div class="social-buttons">  
     <a href="https://twitter.com/hann_ah29">
         <img src="images/twitter.png" alt="https://twitter.com/hann_ah29"
-        style="width:42px;height:42px;border:o;">
+        style="width:42px;height:42px;border:0;">
         <a href="https://www.instagram.com/han.nah_a/">
           <img src="images/instagram.jfif" alt="https://www.instagram.com/han.nah_a/"
-          style="width:42px;height:42px;border:o;">
+          style="width:42px;height:42px;border:0;">
           <a href="https://www.linkedin.com/in/hannah-a-ba4521121/">
-            <img src="images/linkedin.png" alt="https://www.linkedin.com/in/hannah-a-ba4521121/""
-            style="width:42px;height:42px;border:o;">
+            <img src="images/linkedin.png" alt="https://www.linkedin.com/in/hannah-a-ba4521121/"
+            style="width:42px;height:42px;border:0;">
         </div>
     </body>
 </html> 
