--- a/Contact.html
+++ b/Contact.html
@@ -13,23 +13,27 @@
             <div class="navbar"style="text-align: center;"> 
         <ul>
           <li><a href="Index.html">Home</a></li>
-          <li class="active">
-            <a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+             <li class="active"><a href="Contact.html">Contact</a></li>
           <li><a href="cv.html">CV</a></li>
         </ul>
       </nav>
       <div class="hero">
-        <img class="image_bg"> 
-        <div class="container">
-          <img src="images/green-mountains.jpg" type="image/jpg">
-           <h1> Contact </h1>
+        <h1>Contact</h1> 
+        <img class="image_bg" src="images/beach.jpg" type="image/jpg"> <!--Source: https://www.pexels.com/photo/bird-s-eye-view-of-seashore-during-daytime-3161415/-->
       </div>
-    </div>
+    
       <h3> You can contact me via :</h3>
         <p>Email: hannahrub156@gmail.com</p> 
         <p>Instagram: han.nah29</p>
         <p>Twitter: han.nah_a</p>
+        <p>Location:</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3438.1377819196055!2d-0.8900459623223557!3d52.230721239405426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48770f2077648bd1%3A0x89a46de144fd2da6!2sUniversity%20of%20Northampton%20Waterside%20Campus!5e0!3m2!1sen!2suk!4v1578588423605!5m2!1sen!2suk" 
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe> <!--Source:
+          https://www.youtube.com/watch?v=LoOb3jSnEw0-->
+        <p> You can send me a message me a message by filling out the form below:</p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSctA3J9mZQGPGcEKQfxjaEf-iuixRsXa7sB4heLcyIKAnN5uQ/viewform?embedded=true"
+         width="640" height="947" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>          
     </body>
 </html> 
