--- a/cv.html
+++ b/cv.html
@@ -11,10 +11,9 @@
             <div class="navbar"style="text-align: center;"> 
         <ul>
           <li><a href="Index.html">Home</a></li>
-          <li class="active">
-            <a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Portfolio.html">Portfolio</a></li>
             <li><a href="Contact.html">Contact</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li class="active"><a href="cv.html">CV</a></li>
           
         </ul>
       </nav>
