corrected file name & comments added on portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,10 +10,10 @@
         <nav>
          <div class="navbar"style="text-align: center;"> 
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="active">
-                  <a href="Portfolio.html">Portfolio</a></li>
-                  <li><a href="Contact.html">Contact</a></li>
+                  <a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
@@ -27,23 +27,25 @@
         <div class="gallery-item">
 
             <h3>Event- Driven Programming - pizza ordering system</h3>
-            <img src="images/program_1.jpg" alt=" Event- Driven Programming -pizza ordering system">
+            <img src="images/program_1.jpg" alt=" Event- Driven Programming -pizza ordering system main menu">
             <p> For this project I had to create an online pizza ordering system, which had to be done using 
                 an event- Driven program technique. </p>
+                        <!--project 1- Event- Driven Programming-->
 
             <h3> Procedural Programming - pizza ordering system</h3>
-             <img src="images/program_2.jpg"  alt="Procedural Programming- pizza ordering system"> 
+             <img src="images/program_2.jpg"  alt="Procedural Programming- pizza ordering system main menu"> 
              <p> For this project I had to create an online pizza ordering system, which had to be done using 
                 a procedural Programming technique. </p>
-
+                        <!--project 2- procedural programming-->
             <h3>Two player game</h3>
-            <img src="images/low-angle.jpg" alt="low angle image- placeholder 1">
+            <img src="images/low-angle.jpg" alt="low angle image- placeholder">
             <div class="Portfolio">
              <p>one project that I am working on is a two player computer game. There are four babies in total; two on each side. 
                 With a ball in the middle going in random directions. The aim of the game is to get the baby to hit the ball so 
                 that it rebounds and goes to the otherside.</p> 
+                        <!--project 3- game-->
             </div>
-                <!--project 1- game-->
+                
             
 
         </div> 
