--- a/Contact.html
+++ b/Contact.html
@@ -12,9 +12,9 @@
         <nav>
             <div class="navbar"style="text-align: center;"> 
         <ul>
-          <li><a href="Index.html">Home</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-             <li class="active"><a href="Contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+             <li class="active"><a href="contact.html">Contact</a></li>
           <li><a href="cv.html">CV</a></li>
         </ul>
       </nav>
@@ -24,7 +24,7 @@
       </div>
     
       <h3> You can contact me via :</h3>
-        <p>Email: hannahrub156@gmail.com</p> 
+        <p>Email: hannahrub156@gmail.com</p>
         <p>Instagram: han.nah29</p>
         <p>Twitter: han.nah_a</p>
         <p>Location:</p>
