--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,8 @@
         <ul>
           
           <li class="active"><a href="index.html">Home</a></li>
-          <Li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+          <Li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
           <li><a href="cv.html">CV</a></li>
         </ul>
         </div>
