--- a/cv.html
+++ b/cv.html
@@ -10,9 +10,9 @@
         <nav>
             <div class="navbar"style="text-align: center;"> 
         <ul>
-          <li><a href="Index.html">Home</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
           <li class="active"><a href="cv.html">CV</a></li>
           
         </ul>
